Fix mobile layout issues in To-Do List

--- a/todo-app/style.css
+++ b/todo-app/style.css
@@ -14,7 +14,7 @@ h1, input, button, ul{
 ul{
     list-style-type: none;
     width: 100%;
-    min-width: 250px;
+    min-width: 210px;
     max-width: 25vw;
 }
 li{
@@ -32,4 +32,10 @@ li.completed span{
 ul>p{
     color: gray;
     font-style: italic;
+}
+
+@media (max-width: 500px){
+    li{
+        flex-direction: column;
+    }
 }
